Recompile HTML and PDF for RJ-2023-064

--- a/_articles/RJ-2023-064/RJ-2023-064.tex
+++ b/_articles/RJ-2023-064/RJ-2023-064.tex
@@ -124,112 +124,88 @@ computationally efficient implementation of the likelihood function. See
 \begin{table}
 \caption{\label{tab:data-formats-balanced}Formats for balanced rating data.}
 
-\begin{tabular}{r|r|r}
-\hline
+\begin{tabular}[t]{rrr}
+\toprule
 \multicolumn{3}{c}{(a) Long} \\
-\cline{1-3}
+\cmidrule(l{3pt}r{3pt}){1-3}
 Item & Rater & Rating\\
-\hline
+\midrule
 1 & 1 & 3\\
-\hline
 1 & 2 & 4\\
-\hline
 2 & 1 & 2\\
-\hline
 2 & 2 & 2\\
-\hline
 3 & 1 & 2\\
-\hline
 3 & 2 & 2\\
-\hline
+\bottomrule
 \end{tabular}
-\begin{tabular}{r|r|r}
-\hline
+\begin{tabular}[t]{rrr}
+\toprule
 \multicolumn{3}{c}{(b) Wide} \\
-\cline{1-3}
+\cmidrule(l{3pt}r{3pt}){1-3}
 Item & Rater 1 & Rater 2\\
-\hline
+\midrule
 1 & 3 & 4\\
-\hline
 2 & 2 & 2\\
-\hline
 3 & 2 & 2\\
-\hline
+\bottomrule
 \end{tabular}
-\begin{tabular}{r|r|r}
-\hline
+\begin{tabular}[t]{rrr}
+\toprule
 \multicolumn{3}{c}{(c) Wide (grouped)} \\
-\cline{1-3}
+\cmidrule(l{3pt}r{3pt}){1-3}
 Rater 1 & Rater 2 & Tally\\
-\hline
+\midrule
 3 & 4 & 1\\
-\hline
 2 & 2 & 2\\
-\hline
+\bottomrule
 \end{tabular}
 \end{table}
 
 \begin{table}
 \caption{\label{tab:data-formats-unbalanced}Formats for unbalanced rating data. Missing values are indicated by ‘NA’.}
 
-\begin{tabular}{r|r|r}
-\hline
+\begin{tabular}[t]{rrr}
+\toprule
 \multicolumn{3}{c}{(a) Long} \\
-\cline{1-3}
+\cmidrule(l{3pt}r{3pt}){1-3}
 Item & Rater & Rating\\
-\hline
+\midrule
 1 & 1 & 3\\
-\hline
 1 & 2 & 4\\
-\hline
 2 & 1 & 2\\
-\hline
 2 & 2 & 2\\
-\hline
 3 & 1 & 2\\
-\hline
 3 & 2 & 2\\
-\hline
 4 & 1 & 3\\
-\hline
 5 & 1 & 3\\
-\hline
 6 & 2 & 4\\
-\hline
+\bottomrule
 \end{tabular}
-\begin{tabular}{r|r|r}
-\hline
+\begin{tabular}[t]{rrr}
+\toprule
 \multicolumn{3}{c}{(b) Wide} \\
-\cline{1-3}
+\cmidrule(l{3pt}r{3pt}){1-3}
 Item & Rater 1 & Rater 2\\
-\hline
+\midrule
 1 & 3 & 4\\
-\hline
 2 & 2 & 2\\
-\hline
 3 & 2 & 2\\
-\hline
 4 & 3 & NA\\
-\hline
 5 & 3 & NA\\
-\hline
 6 & NA & 4\\
-\hline
+\bottomrule
 \end{tabular}
-\begin{tabular}{r|r|r}
-\hline
+\begin{tabular}[t]{rrr}
+\toprule
 \multicolumn{3}{c}{(c) Wide (grouped)} \\
-\cline{1-3}
+\cmidrule(l{3pt}r{3pt}){1-3}
 Rater 1 & Rater 2 & Tally\\
-\hline
+\midrule
 3 & 4 & 1\\
-\hline
 2 & 2 & 2\\
-\hline
 3 & NA & 2\\
-\hline
 NA & 4 & 1\\
-\hline
+\bottomrule
 \end{tabular}
 \end{table}
 
@@ -522,7 +498,7 @@ scenarios (data not shown).
 \hypertarget{relationship-to-previous-work}{%
 \subsubsection{Relationship to previous work}\label{relationship-to-previous-work}}
 
-The \emph{Stan User's Guide} (Section 7.4) (Stan Development Team 2021) suggests the following choice of
+The \emph{Stan User's Guide} (Stan Development Team 2021, sec. 7.4) suggests the following choice of
 values for \(\beta\):
 \[
   \beta_{k', k} =
@@ -742,8 +718,10 @@ Finally, when \(K = 2\) the Dawid--Skene model reduces to the so-called
 `traditional' or `standard' latent class model as first described by
 Hui and Walter (1980). See Asselineau et al. (2018) for a more modern description.
 
+
+
 \begin{figure}
-\includegraphics[width=1\linewidth]{tikz/figrelationships} \caption{Relationships between models. Models coloured blue are implemented in <a href='https://CRAN.R-project.org/package=rater'>rater</a>. DS: Dawid–Skene. LCM: latent class model.}\label{fig:relationships}
+\includegraphics[width=1\linewidth]{tikz/figrelationships} \caption{Relationships between models. Models coloured blue are implemented in \CRANpkg{rater}. DS: Dawid–Skene. LCM: latent class model.}\label{fig:relationships}
 \end{figure}
 
 \hypertarget{sec:relationships-existing-packages}{%
@@ -780,18 +758,15 @@ and its support for repeated ratings.
   \CRANpkg{rater} and existing R
   packages for fitting latent class models. DS: Dawid--Skene.}
 \centering
-\begin{tabular}[t]{l|l|l|l|l|l}
-\hline
+\begin{tabular}[t]{llllll}
+\toprule
 Package & DS model & Fitting method & Response type & Repeated ratings & Data formats\\
-\hline
-rater & Yes & Bayesian & Polytomous & Yes & Wide, grouped, long\\
-\hline
-BayesLCA & When \$K = 2\$ & Bayesian & Binary & No & Wide, grouped\\
-\hline
-randomLCA & When \$K = 2\$ & Frequentist & Binary & No & Wide, grouped\\
-\hline
-poLCA & Yes & Frequentist & Polytomous & No & Wide\\
-\hline
+\midrule
+\CRANpkg{rater} & Yes & Bayesian & Polytomous & Yes & Wide, grouped, long\\
+\CRANpkg{BayesLCA} & When $K = 2$ & Bayesian & Binary & No & Wide, grouped\\
+\CRANpkg{randomLCA} & When $K = 2$ & Frequentist & Binary & No & Wide, grouped\\
+\CRANpkg{poLCA} & Yes & Frequentist & Polytomous & No & Wide\\
+\bottomrule
 \end{tabular}
 \end{table}
 
@@ -1193,7 +1168,7 @@ was given. This layout of the data supports raters rating the same item
 multiple times, as happens in the dataset. It is also the most convenient from
 the perspective of fitting models but may not always be the optimal way to
 store or represent categorical rating data; see
-\nameref{sec:using-grouped-data} for an example using the `grouped' data
+\protect\hyperlink{sec:using-grouped-data}{Section 7.6} for an example using the `grouped' data
 format.
 
 \hypertarget{fitting-the-model}{%
@@ -1208,16 +1183,16 @@ fit_1 <- rater(anesthesia, dawid_skene())
 This command will print the running output from Stan, providing an
 indication of the progress of the sampler (for brevity, we have not shown this
 output here).
-To fit the model via optimisation, we set the \code{method} argument to
-\code{"optim"}:
+To fit the model via optimisation, we set the \texttt{method} argument to
+\texttt{"optim"}:
 
 \begin{verbatim}
 fit_2 <- rater(anesthesia, dawid_skene(), method = "optim")
 \end{verbatim}
 
-The second argument of the \code{rater()} function specifies the model to use.
-We have implemented this similarly to the \code{family} argument in
-\code{glm()}, which can be passed as either a function or as a character
+The second argument of the \texttt{rater()} function specifies the model to use.
+We have implemented this similarly to the \texttt{family} argument in
+\texttt{glm()}, which can be passed as either a function or as a character
 string. The above examples pass the model as a function. We could have instead
 passed it as a string, for example:
 
@@ -1227,13 +1202,13 @@ fit_2 <- rater(anesthesia, "dawid_skene", method = "optim")
 
 Either version will fit the Dawid--Skene model using the default choice of
 prior. The benefit of passing the model as a function is that it allows you to
-change the prior, see \nameref{sec:different-models-priors}.
+change the prior, see \protect\hyperlink{sec:different-models-priors}{Section 7.5}.
 
 \hypertarget{inspecting-the-fitted-model}{%
 \subsection{Inspecting the fitted model}\label{inspecting-the-fitted-model}}
 
 \CRANpkg{rater} includes several ways to inspect the output of fitted models.
-These are summarised in \autoref{tab:inspecting-fitted-models}, and we
+These are summarised in \protect\hyperlink{tab:inspecting-fitted-models}{Table 4}, and we
 illustrate many of them here. Firstly, we can generate a text summary:
 
 \begin{verbatim}
@@ -1253,21 +1228,21 @@ summary(fit_1)
 #> 
 #> pi/theta samples:
 #>                mean   5%  95% Rhat ess_bulk
-#> pi[1]          0.37 0.27 0.48    1  9094.91
-#> pi[2]          0.41 0.30 0.52    1  8050.47
-#> pi[3]          0.14 0.07 0.23    1  6864.65
-#> pi[4]          0.07 0.03 0.14    1  6665.16
-#> theta[1, 1, 1] 0.86 0.79 0.93    1  7728.01
-#> theta[1, 1, 2] 0.10 0.05 0.17    1  7857.38
-#> theta[1, 1, 3] 0.02 0.00 0.05    1  5619.81
-#> theta[1, 1, 4] 0.02 0.00 0.05    1  6283.33
+#> pi[1]          0.37 0.27 0.48    1  7711.23
+#> pi[2]          0.41 0.30 0.52    1  6618.56
+#> pi[3]          0.14 0.07 0.23    1  6313.42
+#> pi[4]          0.07 0.03 0.14    1  7503.59
+#> theta[1, 1, 1] 0.86 0.79 0.93    1  8207.03
+#> theta[1, 1, 2] 0.10 0.05 0.17    1  7918.02
+#> theta[1, 1, 3] 0.02 0.00 0.05    1  5680.37
+#> theta[1, 1, 4] 0.02 0.00 0.05    1  5398.61
 #> # ... with 76 more rows
 #> 
 #> z:
 #>      MAP Pr(z = 1) Pr(z = 2) Pr(z = 3) Pr(z = 4)
 #> z[1]   1      1.00      0.00      0.00      0.00
-#> z[2]   3      0.00      0.00      0.98      0.02
-#> z[3]   2      0.38      0.62      0.00      0.00
+#> z[2]   3      0.00      0.00      0.97      0.03
+#> z[3]   2      0.39      0.61      0.00      0.00
 #> z[4]   2      0.01      0.99      0.00      0.00
 #> z[5]   2      0.00      1.00      0.00      0.00
 #> z[6]   2      0.00      1.00      0.00      0.00
@@ -1285,28 +1260,23 @@ convergence of the sampler.
 
 \caption{\label{tab:inspecting-fitted-models}Methods to inspect fitted models and what values they return.}
 \centering
-\begin{tabular}[t]{l|l|l}
-\hline
-  & MCMC mode & Optimisation mode\\
-\hline
-`summary()` & Basic inforamtion about the fitted model & Basic inforamtion about the fitted model\\
-\hline
-`point\_estimate()` & Posterior means for \$\textbackslash{}pi\$ and \$\textbackslash{}theta\$, posterior modes for \$z\$ & Posterior modes for all quantities\\
-\hline
-`posterior\_interval()` & Credible intervals for \$\textbackslash{}pi\$ and \$\textbackslash{}theta\$ & N/A\\
-\hline
-`posterior\_samples()` & MCMC draws for \$\textbackslash{}pi\$ and \$\textbackslash{}theta\$ & N/A\\
-\hline
-`mcmc\_diagnostics()` & MCMC convergence diagnostics for \$\textbackslash{}pi\$ and \$\textbackslash{}theta\$ & N/A\\
-\hline
-`class\_probabilities()` & Posterior distribution for \$z\$ & Posterior distribution for \$z\$ conditional on the
-                          posterior modes for \$\textbackslash{}pi\$ and \$\textbackslash{}theta\$\\
-\hline
+\begin{tabular}[t]{lll}
+\toprule
+Function & MCMC mode & Optimisation mode\\
+\midrule
+summary() & Basic information about the fitted model & Basic information about the fitted model\\
+point\_estimate() & Posterior means for $\pi$ and $\theta$, posterior modes for $z$ & Posterior modes for all quantities\\
+posterior\_interval() & Credible intervals for $\pi$ and $\theta$ & N/A\\
+posterior\_samples() & MCMC draws for $\pi$ and $\theta$ & N/A\\
+mcmc\_diagnostics() & MCMC convergence diagnostics for $\pi$ and $\theta$ & N/A\\
+class\_probabilities() & Posterior distribution for $z$ & Posterior distribution for $z$ conditional on the
+                          posterior modes for $\pi$ and $\theta$\\
+\bottomrule
 \end{tabular}
 \end{table}
 
 We can extract point estimates for any of the parameters or the latent classes
-via the \code{point\_estimate()} function. For example, the following will
+via the \texttt{point\_estimate()} function. For example, the following will
 return the latent class with the highest posterior probability (i.e., the
 posterior modes) for each item:
 
@@ -1330,7 +1300,7 @@ point_estimate(fit_1, "pi")
 
 \begin{verbatim}
 #> $pi
-#> [1] 0.37432122 0.40674116 0.14406295 0.07487466
+#> [1] 0.37494173 0.40699736 0.14308320 0.07497771
 \end{verbatim}
 
 From the outputs above, we can see that the model has inferred that most
@@ -1339,16 +1309,16 @@ each), and categories 3 and 4 being rarer (about 14\% and 7\% respectively).
 Based on the point estimates, there are examples of patients from each category
 in the dataset.
 
-The function call \code{point\_estimate(fit1, "theta")} will return posterior
+The function call \texttt{point\_estimate(fit1,\ "theta")} will return posterior
 means for the parameters in the error matrices (not shown here, for brevity).
-When used with optimisation fits, \code{point\_estimate()} will return
+When used with optimisation fits, \texttt{point\_estimate()} will return
 posterior modes rather than posterior means for the parameters.
 
 \hypertarget{inspecting-posterior-distributions}{%
 \subsection{Inspecting posterior distributions}\label{inspecting-posterior-distributions}}
 
 To represent uncertainty, we need to look beyond point estimates. The function
-\code{posterior\_interval()} will return credible intervals for the parameters.
+\texttt{posterior\_interval()} will return credible intervals for the parameters.
 For example, 80\% credible intervals for the elements of the error matrices:
 
 \begin{verbatim}
@@ -1357,15 +1327,15 @@ head(posterior_interval(fit_1, 0.8, "theta"))
 
 \begin{verbatim}
 #>                        10%        90%
-#> theta[1, 1, 1] 0.805074415 0.91666962
-#> theta[1, 1, 2] 0.055802572 0.15309851
-#> theta[1, 1, 3] 0.001813371 0.03941595
-#> theta[1, 1, 4] 0.001760845 0.03832660
-#> theta[1, 2, 1] 0.026218408 0.10590753
-#> theta[1, 2, 2] 0.791396057 0.90637035
+#> theta[1, 1, 1] 0.808424222 0.91748036
+#> theta[1, 1, 2] 0.056880332 0.15190940
+#> theta[1, 1, 3] 0.002054112 0.03816802
+#> theta[1, 1, 4] 0.001902675 0.03877060
+#> theta[1, 2, 1] 0.025140386 0.10660095
+#> theta[1, 2, 2] 0.792734923 0.90565098
 \end{verbatim}
 
-The function \code{posterior\_samples()} will return the actual MCMC draws. For
+The function \texttt{posterior\_samples()} will return the actual MCMC draws. For
 example (here just illustrating the draws of the \(\pi\) parameter):
 
 \begin{verbatim}
@@ -1375,12 +1345,12 @@ head(posterior_samples(fit_1, "pi")$pi)
 \begin{verbatim}
 #>           
 #> iterations      [,1]      [,2]      [,3]       [,4]
-#>       [1,] 0.4830595 0.3579169 0.1254949 0.03352871
-#>       [2,] 0.2939839 0.3834238 0.2516929 0.07089945
-#>       [3,] 0.3636097 0.4148082 0.1309119 0.09067012
-#>       [4,] 0.3798456 0.3133947 0.2353036 0.07145615
-#>       [5,] 0.3639428 0.4291340 0.1760525 0.03087066
-#>       [6,] 0.3845465 0.3831443 0.1721656 0.06014354
+#>       [1,] 0.3113717 0.5159548 0.1065649 0.06610860
+#>       [2,] 0.3291913 0.5045808 0.1118197 0.05440824
+#>       [3,] 0.4139702 0.3722164 0.1930625 0.02075091
+#>       [4,] 0.3250894 0.3900290 0.1906750 0.09420661
+#>       [5,] 0.4379661 0.3755352 0.1162638 0.07023494
+#>       [6,] 0.3497392 0.4473862 0.1410683 0.06180628
 \end{verbatim}
 
 Neither of the above will work for optimisation fits, which are limited to
@@ -1394,12 +1364,12 @@ head(class_probabilities(fit_1))
 \begin{verbatim}
 #>    
 #>             [,1]         [,2]         [,3]         [,4]
-#>   1 9.999994e-01 1.340790e-07 2.916232e-08 4.521956e-07
-#>   2 8.469190e-08 2.570243e-05 9.773942e-01 2.257999e-02
-#>   3 3.823085e-01 6.171346e-01 1.075246e-04 4.493620e-04
-#>   4 5.252130e-03 9.942742e-01 3.418545e-04 1.318565e-04
-#>   5 2.473083e-07 9.999633e-01 3.338995e-05 3.062785e-06
-#>   6 1.674456e-06 9.993819e-01 5.813534e-04 3.502596e-05
+#>   1 9.999994e-01 1.373634e-07 2.540589e-08 4.159547e-07
+#>   2 1.224477e-07 2.344540e-05 9.709859e-01 2.899051e-02
+#>   3 3.925501e-01 6.069081e-01 7.765885e-05 4.641687e-04
+#>   4 5.716126e-03 9.937301e-01 3.973305e-04 1.564880e-04
+#>   5 2.256267e-07 9.999702e-01 2.646762e-05 3.118893e-06
+#>   6 1.539384e-06 9.994184e-01 5.543972e-04 2.569624e-05
 \end{verbatim}
 
 This works for both MCMC and optimisation fits. For the former, the output is
@@ -1414,7 +1384,7 @@ Using \CRANpkg{rater}, we can plot the parameter estimates and
 distribution of latent classes.
 
 The following command will visualise the posterior means of the error rate
-parameters, with the output shown in \autoref{fig:plot-theta}:
+parameters, with the output shown in \protect\hyperlink{fig:plot-theta}{Figure 2}:
 
 \begin{verbatim}
 plot(fit_1, "raters")
@@ -1435,7 +1405,7 @@ pre-operative health. Looking at the non-diagonal entries, we can see that
 typically the most common errors are 1-point differences on the rating scale.
 
 The following command visualises the latent class probabilities, with the
-output shown in \autoref{fig:plot-z}:
+output shown in \protect\hyperlink{fig:plot-z}{Figure 3}:
 
 \begin{verbatim}
 plot(fit_1, "latent_class", item_index = c(2, 3, 12, 36, 38))
@@ -1458,8 +1428,8 @@ pre-operative health by combining all of the anaesthetists' ratings, we can do
 so confidently for all but a handful of patients.
 
 The same output for the models fitted via
-optimisation rather than MCMC (using \code{fit\_2} instead of \code{fit\_1}) are
-shown in \autoref{fig:plot-theta-fit2} and \autoref{fig:plot-z-fit2}. We can
+optimisation rather than MCMC (using \texttt{fit\_2} instead of \texttt{fit\_1}) are
+shown in \protect\hyperlink{fig:plot-theta-fit2}{Figure 4} and \protect\hyperlink{fig:plot-z-fit2}{Figure 5}. We can
 see that this estimation method leads to the same broad conclusions, however the
 optimisation-based estimates have considerably less uncertainty: they are
 typically closer to 0 or 1. This behaviour reflects the fact that
@@ -1467,13 +1437,17 @@ optimisation-based inference will usually not capture the full uncertainty and
 will lead to overconfident estimates. Thus, we recommend using MCMC (which we
 have set as the default).
 
+
+
+
+
 \begin{figure}
 
 {\centering \includegraphics{RJ-2023-064_files/figure-latex/plot-theta-fit2-1} 
 
 }
 
-\caption{Visual representation of the inferred parameters in the error matrices ($\theta$) for the Dawid--Skene model fitted via optimisation to the anaesthesia dataset.  Compare with \autoref{fig:plot-theta}, which used MCMC instead of optimisation.}\label{fig:plot-theta-fit2}
+\caption{Visual representation of the inferred parameters in the error matrices ($\theta$) for the Dawid--Skene model fitted via optimisation to the anaesthesia dataset.  Compare with \protect\hyperlink{fig:plot-theta}{Figure 2}, which used MCMC instead of optimisation.}\label{fig:plot-theta-fit2}
 \end{figure}
 
 \begin{figure}
@@ -1482,12 +1456,12 @@ have set as the default).
 
 }
 
-\caption{Visualisation of the inferred probability of each latent class, for a selected subset of items, for the Dawid--Skene model fitted via optimisation to the anaesthesia dataset.  Compare with \autoref{fig:plot-z}, which used MCMC instead of optimisation.}\label{fig:plot-z-fit2}
+\caption{Visualisation of the inferred probability of each latent class, for a selected subset of items, for the Dawid--Skene model fitted via optimisation to the anaesthesia dataset.  Compare with \protect\hyperlink{fig:plot-z}{Figure 3}, which used MCMC instead of optimisation.}\label{fig:plot-z-fit2}
 \end{figure}
 
 While it is typically of less interest, it is also possible to visualise the
 prevalence estimates, together with credible intervals, using the following
-command (see output in \autoref{fig:plot-pi}):
+command (see output in \protect\hyperlink{fig:plot-pi}{Figure 6}):
 
 \begin{verbatim}
 plot(fit_1, "prevalence")
@@ -1505,7 +1479,7 @@ plot(fit_1, "prevalence")
 \hypertarget{sec:different-models-priors}{%
 \subsection{Different models and priors}\label{sec:different-models-priors}}
 
-The second argument to the \code{rater()} function specifies what model to use,
+The second argument to the \texttt{rater()} function specifies what model to use,
 including details of the prior if not using the default one. This gives a
 unified place to specify both the model and prior.
 
@@ -1535,7 +1509,7 @@ diff_model_fit <- rater(anesthesia, class_conditional_dawid_skene())
 Compared with the Dawid--Skene model, the latter uses error matrices with the
 constraint that all off-diagonal entries must be the same. We can visualise
 the \(\theta\) parameter using the following command (output in
-\autoref{fig:plot-theta-diff-model}) and see that all off-diagonal elements are
+\protect\hyperlink{fig:plot-theta-diff-model}{Figure 7}) and see that all off-diagonal elements are
 indeed equal:
 
 \begin{verbatim}
@@ -1548,7 +1522,7 @@ plot(diff_model_fit, "theta")
 
 }
 
-\caption{Visual representation of the inferred parameters in the error matrices ($\theta$) for the class-conditional Dawid--Skene model fitted via MCMC to the anaesthesia dataset.  Compare with \autoref{fig:plot-theta}, which used the standard Dawid--Skene model.}\label{fig:plot-theta-diff-model}
+\caption{Visual representation of the inferred parameters in the error matrices ($\theta$) for the class-conditional Dawid--Skene model fitted via MCMC to the anaesthesia dataset.  Compare with \protect\hyperlink{fig:plot-theta}{Figure 2}, which used the standard Dawid--Skene model.}\label{fig:plot-theta-diff-model}
 \end{figure}
 
 \hypertarget{sec:using-grouped-data}{%
@@ -1587,7 +1561,7 @@ recorded in that format. The `wide' format doesn't provide any computational
 advantages but is a common format for data without repeated ratings and so is
 provided for convenience.
 
-Here's how we fit the model to grouped data (note the \code{data\_format}
+Here's how we fit the model to grouped data (note the \texttt{data\_format}
 argument):
 
 \begin{verbatim}
@@ -1595,7 +1569,7 @@ fit3 <- rater(caries, dawid_skene(), data_format = "grouped")
 \end{verbatim}
 
 From there, we can inspect the model fit in the same way as before. For
-example (output shown in \autoref{fig:plot-theta-caries}):
+example (output shown in \protect\hyperlink{fig:plot-theta-caries}{Figure 8}):
 
 \begin{verbatim}
 plot(fit3, "raters")
@@ -1619,20 +1593,20 @@ dentist was much better at diagnosing caries than healthy teeth.
 A key part of applied Bayesian statistics is assessing whether the
 MCMC sampler has converged on the posterior distribution. To summarise the
 convergence of a model fit using MCMC, \CRANpkg{rater} provides the
-\code{mcmc\_diagnostics()} function.
+\texttt{mcmc\_diagnostics()} function.
 
 \begin{verbatim}
 head(mcmc_diagnostics(fit_1))
 \end{verbatim}
 
 \begin{verbatim}
-#>                     Rhat ess_bulk
-#> pi[1]          0.9997012 9094.906
-#> pi[2]          1.0009095 8050.465
-#> pi[3]          1.0000406 6864.648
-#> pi[4]          1.0021824 6665.159
-#> theta[1, 1, 1] 1.0013982 7728.007
-#> theta[1, 1, 2] 1.0011678 7857.378
+#>                    Rhat ess_bulk
+#> pi[1]          1.001111 7711.234
+#> pi[2]          1.001517 6618.559
+#> pi[3]          1.000364 6313.424
+#> pi[4]          1.000498 7503.592
+#> theta[1, 1, 1] 1.000946 8207.031
+#> theta[1, 1, 2] 1.001812 7918.018
 \end{verbatim}
 
 This function calculates and displays the \(\hat{R}\) statistic (\texttt{Rhat}) and bulk
@@ -1643,14 +1617,14 @@ for a specific parameter if it's \(\hat{R} < 1.01\) (Vehtari et al. 2021).
 
 Users wishing to calculate other metrics, or produce convergence visualisations
 such as trace plots, can either extract the underlying Stan model from the
-\CRANpkg{rater} fit using the \code{get\_stanmodel()} function, or convert the
-fit into a \code{mcmc.list} from the \CRANpkg{coda} package using the
-\code{as\_mcmc.list()} function. Functions in the \CRANpkg{rstan} and
+\CRANpkg{rater} fit using the \texttt{get\_stanmodel()} function, or convert the
+fit into a \texttt{mcmc.list} from the \CRANpkg{coda} package using the
+\texttt{as\_mcmc.list()} function. Functions in the \CRANpkg{rstan} and
 \CRANpkg{coda} packages will then allow visualisation based assessment of
 convergence and the calculation of other, more advanced, diagnostics.
 
 For example, the following code uses \CRANpkg{rstan} to draw the trace plot
-(shown in \autoref{fig:plot-rstan-traceplot}) for one of the parameters from
+(shown in \protect\hyperlink{fig:plot-rstan-traceplot}{Figure 9}) for one of the parameters from
 the Dawid--Skene model fitted to the anaesthesia data. We can see that the
 four chains show good mixing. The trace plots for the other parameters
 (not shown here) are similar, indicating that the MCMC sampling procedure has
@@ -1674,7 +1648,7 @@ rstan::traceplot(stan_fit, pars = "pi[1]")
 \subsection{Model assessment and comparison}\label{sec:model-assessment-comparison}}
 
 Finally, \CRANpkg{rater} provides facilities to assess and compare fitted
-models. First, it provides the \code{posterior\_predict()} function to simulate from
+models. First, it provides the \texttt{posterior\_predict()} function to simulate from
 the posterior predictive distributions of all the models implemented in
 \CRANpkg{rater}. The simulated data can then be used, for example, to perform
 posterior predictive checks. These checks compare the data
@@ -1701,12 +1675,12 @@ head(ppc_statistics)
 \end{verbatim}
 
 \begin{verbatim}
-#> [1] 0.5587302 0.4507937 0.4126984 0.4190476 0.4666667 0.2539683
+#> [1] 0.3492063 0.3777778 0.4095238 0.3650794 0.2603175 0.3174603
 \end{verbatim}
 
 We can then graphically compare the distribution of these statistics to the
 value of the same statistic applied to the anaesthesia dataset. The following
-commands will create such a plot (shown in \autoref{fig:plot-ppcs}):
+commands will create such a plot (shown in \protect\hyperlink{fig:plot-ppcs}{Figure 10}):
 
 \begin{verbatim}
 ggplot(data.frame(prop_class_two = ppc_statistics), aes(prop_class_two)) +
@@ -1737,11 +1711,11 @@ the data well. (This is an illustrative example only. A more comprehensive
 set of such comparisons should be conducted before concluding that the model
 adequately describes the data.)
 
-Second, \CRANpkg{rater} implements the functions \code{loo()} and \code{waic()}
+Second, \CRANpkg{rater} implements the functions \texttt{loo()} and \texttt{waic()}
 to provide model comparison metrics using the \CRANpkg{loo} package. The
-function \code{loo()} calculates an approximation to leave-out-one
+function \texttt{loo()} calculates an approximation to leave-out-one
 cross-validation, a measure of model performance using Pareto Smoothed
-Importance Sampling (Vehtari, Gelman, and Gabry 2017). The function \code{waic()} calculates
+Importance Sampling (Vehtari, Gelman, and Gabry 2017). The function \texttt{waic()} calculates
 measures related to the Widely Applicable Information Criterion
 (Watanabe 2013). Because \CRANpkg{rater} fits models in a Bayesian
 framework, information criteria such as the AIC and BIC are not implemented.
@@ -1751,7 +1725,7 @@ the different implemented models, not between the same model with different
 parameter values or included covariates, as is more commonly the case. For
 this reason, considerations of data size and what is known about the
 characteristics of the raters should also be taken into account when making
-such choices, in addition to the output of \code{loo()} and \code{waic()}.
+such choices, in addition to the output of \texttt{loo()} and \texttt{waic()}.
 
 To briefly illustrate some of this functionality, we compare the standard
 Dawid--Skene model to the class-conditional one.
@@ -1765,20 +1739,18 @@ loo(fit_1)
 #> Computed from 4000 by 45 log-likelihood matrix
 #> 
 #>          Estimate   SE
-#> elpd_loo   -233.7 16.9
+#> elpd_loo   -233.7 17.0
 #> p_loo        19.8  2.6
-#> looic       467.5 33.9
+#> looic       467.4 33.9
 #> ------
-#> Monte Carlo SE of elpd_loo is 0.1.
+#> Monte Carlo SE of elpd_loo is NA.
 #> 
 #> Pareto k diagnostic values:
 #>                          Count Pct.    Min. n_eff
-#> (-Inf, 0.5]   (good)     43    95.6%   734       
-#>  (0.5, 0.7]   (ok)        2     4.4%   497       
-#>    (0.7, 1]   (bad)       0     0.0%   <NA>      
+#> (-Inf, 0.5]   (good)     43    95.6%   721       
+#>  (0.5, 0.7]   (ok)        1     2.2%   1017      
+#>    (0.7, 1]   (bad)       1     2.2%   231       
 #>    (1, Inf)   (very bad)  0     0.0%   <NA>      
-#> 
-#> All Pareto k estimates are ok (k < 0.7).
 #> See help('pareto-k-diagnostic') for details.
 \end{verbatim}
 
@@ -1791,9 +1763,9 @@ loo(diff_model_fit)
 #> Computed from 4000 by 45 log-likelihood matrix
 #> 
 #>          Estimate   SE
-#> elpd_loo   -245.7 18.1
-#> p_loo        10.3  1.2
-#> looic       491.3 36.2
+#> elpd_loo   -245.9 18.1
+#> p_loo        10.6  1.2
+#> looic       491.7 36.2
 #> ------
 #> Monte Carlo SE of elpd_loo is 0.1.
 #> 
@@ -1808,7 +1780,7 @@ loo_compare(loo(fit_1), loo(diff_model_fit))
 \begin{verbatim}
 #>        elpd_diff se_diff
 #> model1   0.0       0.0  
-#> model2 -11.9       3.2
+#> model2 -12.2       3.2
 \end{verbatim}
 
 From these results, we see that both models fit the data well, with the
@@ -1882,16 +1854,16 @@ using the R package \CRANpkg{poLCA}.
 \section{Computational details}\label{computational-details}}
 
 The results in this paper were obtained using
-R 4.2.2 (R Core Team 2021)
+R 4.3.2 (R Core Team 2021)
 and the following packages:
 \CRANpkg{coda} 0.19.4 (Plummer et al. 2006),
-\CRANpkg{ggplot2} 3.4.3 (Wickham 2016),
+\CRANpkg{ggplot2} 3.4.4 (Wickham 2016),
 \CRANpkg{knitr} 1.45 (Xie 2014, 2015, 2023),
 \CRANpkg{loo} 2.6.0 (Vehtari et al. 2023),
 \CRANpkg{rater} 1.3.1 (Pullin and Vukcevic 2023),
 \CRANpkg{rjtools} 1.0.12 (O'Hara-Wild et al. 2023),
 \CRANpkg{rmarkdown} 1.0.12 (Xie, Allaire, and Grolemund 2018; Xie, Dervieux, and Riederer 2020; Allaire et al. 2023),
-\CRANpkg{rstan} 2.26.23 (Stan Development Team 2023).
+\CRANpkg{rstan} 2.32.3 (Stan Development Team 2023).
 R itself and all packages used are available from the \href{https://CRAN.R-project.org/}{Comprehensive R Archive
 Network (CRAN)}.
 
@@ -2037,6 +2009,7 @@ Zhang, Wen, Jeffrey Pullin, Lyle Gurrin, and Damjan Vukcevic. 2022. {``Investiga
 
 \end{CSLReferences}
 
+\bibliography{rater.bib}
 
 \address{%
 Jeffrey M. Pullin\\
