fix one formula and figure captions in Rmd version

--- a/_articles/RJ-2023-067/RJ-2023-067-src.Rmd
+++ b/_articles/RJ-2023-067/RJ-2023-067-src.Rmd
@@ -131,7 +131,7 @@ preferable for the test statistic to be integer-valued, and thus we use
 as our test statistic. As will be shown, the $p$-value of the test is
 independent of scalar rescaling of the test statistic.
 
-![Illustration of the computation of the difference statistic $D_{1}$ in
+![Figure 1: Illustration of the computation of the difference statistic $D_{1}$ in
 two dimensions. Each point in the first sample is used to divide the
 plane into four quadrants, and both samples are cumulated in each of the
 four quadrants. The fraction of each sample in each quadrant is shown in
@@ -183,7 +183,7 @@ two samples, and then query each tree $2^{d}$ times. Thus the total time
 complexity to compute the test statistic using range trees for fixed $d$
 is $O(N\log^{d-1}N)$, where $N=\max(n_{1},n_{2})$.
 
-![Time to compute the Fasano--Franceschini test statistic as a function
+![Figure 2: Time to compute the Fasano--Franceschini test statistic as a function
 of sample size, comparing the brute force and range tree methods for
 data of dimensions two through five. Points represent the mean time of
 $200$ evaluations. Samples are taken to be of the same size and are
@@ -262,7 +262,7 @@ Moreover, $p_{M}\to p$ almost surely. These results hold for any
 sampling distributions (continuous, discrete, or mixed) and any valid
 test statistic [@hemerik2018; @ramdas2022permutation].
 
-![Type I error rate of the test using $p_{M}$ and $p_{M}'$ as dimension
+![Figure 3: Type I error rate of the test using $p_{M}$ and $p_{M}'$ as dimension
 increases. Samples are both of size $10$ and are drawn from standard
 multivariate normal distributions of the specified dimension. The number
 of permutations used is $100$, and the error rate is estimated using
@@ -462,7 +462,7 @@ are varied; dispersion alternatives, where the variances of the
 marginals are varied; and copula alternatives, where the marginals
 remain fixed but the copula joining them is varied.
 
-![Visualization of the distributions used in power analyses. Each plot
+![Figure 4: Visualization of the distributions used in power analyses. Each plot
 shows two samples consisting of $10000$ points each. The first sample
 $S_{1}$ is shown in blue, and the second sample $S_{2}$ is shown in red.
 (a) $S_{1}\sim N_{2}(\mathbf{0},\mathbf{I}_{2})$ and
@@ -482,7 +482,7 @@ $N_{d}(\boldsymbol\mu,\boldsymbol\Sigma)$, and sample from it using the
 $d\times d$ identity matrix, which is sometimes used as a covariance
 matrix, is denoted by $\mathbf{I}_{d}$. For copula alternatives, we
 consider the Gaussian copula with correlation matrix
-$$_{ij}=\begin{cases}
+$$[\mathbf{P}(\rho)]_{ij}=\begin{cases}
 \rho,&i\neq j\\
 1,&i=j
 \end{cases}$$ and the Clayton copula with parameter
@@ -505,7 +505,7 @@ range of distributions in this analysis, absent any theoretical results
 concerning these three tests, we cannot guarantee that the results here
 are generalizable to different sampling distributions or sample sizes.
 
-![Comparison of power of the Fasano--Franceschini, Cramér, and DiProPerm
+![Figure 5: Comparison of power of the Fasano--Franceschini, Cramér, and DiProPerm
 tests on various bivariate alternatives. (a) Location alternatives, with
 $S_{1}\sim N_{2}(\mathbf{0},\mathbf{I}_{2})$ and
 $S_{2}\sim N_{2}(\boldsymbol\mu,\mathbf{I}_{2})$. (b) Dispersion
@@ -532,7 +532,7 @@ in these instances, there is significant overlap between the high
 density regions of the two sampling distributions, making it difficult
 to find a separating hyperplane between samples drawn from them.
 
-![Comparison of power of the Fasano--Franceschini, Cramér, and DiProPerm
+![Figure 6: Comparison of power of the Fasano--Franceschini, Cramér, and DiProPerm
 tests on fixed alternatives as the dimension of the data increases. (a)
 Location alternative, with $S_{1}\sim N_{d}(\mathbf{0},\mathbf{I}_{d})$
 and $S_{2}\sim N_{d}(\mathbf{0.4},\mathbf{I}_{d})$. (b) Dispersion
