add submission ids

--- a/_articles/RJ-2023-064/RJ-2023-064.Rmd
+++ b/_articles/RJ-2023-064/RJ-2023-064.Rmd
@@ -32,6 +32,7 @@ date: '2023-12-18'
 date_received: '2022-07-25'
 volume: 15
 issue: 3
+subid: 2022-136
 slug: RJ-2023-064
 journal:
   lastpage: 118
