--- a/_articles/RJ-2023-065/RJ-2023-065.Rmd
+++ b/_articles/RJ-2023-065/RJ-2023-065.Rmd
@@ -49,6 +49,7 @@ draft: no
 date_received: '2022-09-13'
 volume: 15
 issue: 3
+subid: 2022-165
 slug: RJ-2023-065
 output:
   rjtools::rjournal_web_article:
