authors have changed the final title, fix in the editorial

--- a/_news/RJ-2023-3-editorial/RJ-2023-3-editorial.Rmd
+++ b/_news/RJ-2023-3-editorial/RJ-2023-3-editorial.Rmd
@@ -56,7 +56,7 @@ on a diverse range of topics. All packages are available on CRAN. Supplementary 
 - Bayesian Inference for Multivariate Spatial Models with \pkg{INLA}
 
 #### Multivariate statistics
-- \CRANpkg{fasano.franceschini.test}: An Implementation of a Multidimensional KS Test in R
+- \CRANpkg{fasano.franceschini.test}: An Implementation of a Multivariate KS Test in R
 - \CRANpkg{TwoSampleTest.HD}: An R Package for the Two-Sample Problem with High-Dimensional Data
 - \CRANpkg{fnets}: An R Package for Network Estimation and Forecasting via Factor-Adjusted VAR Modelling
 
