minor fixes in RJ-2023-042

--- a/_articles/RJ-2023-042/RJ-2023-042.Rmd
+++ b/_articles/RJ-2023-042/RJ-2023-042.Rmd
@@ -18,25 +18,15 @@ author:
 - name: Prajual Maheshwari
   affiliation: Quantitative Researcher, Ogha Research
   address:
-  - |-
-    2123, 14th Main Road, HAL 3rd Stage, Kodihalli, Bengaluru, Karnataka,
-    India
-  - <https://prajual.netlify.app>
-  - |
-    [`prajual1391@gmail.com`](mailto:prajual1391@gmail.com)
+  - 2123, 14th Main Road, HAL 3rd Stage, Kodihalli, Bengaluru, Karnataka, India
+  url: https://prajual.netlify.app
+  email:  prajual1391@gmail.com
 - name: Mohammad Arshad Rahman
-  affiliation: |-
-    Department of Economic Sciences, Indian Institute of Technology
-    Kanpur
-  address:
-  - |-
-    Room 672, Faculty Building, Indian Institute of Technology Kanpur,
-    India
-  - <https://www.arshadrahman.com>
-  - '*ORCiD: [0000-0001-8434-0042](https://orcid.org/0000-0001-8434-0042)*'
-  - |
-    [`marshad@iitk.ac.in`](mailto:marshad@iitk.ac.in),
-    [`arshadrahman25@gmail.com`](mailto:arshadrahman25@gmail.com)
+  affiliation: Department of Economic Sciences, Indian Institute of Technology Kanpur
+  address: Room 672, Faculty Building, Indian Institute of Technology Kanpur, India
+  url: https://www.arshadrahman.com
+  orcid: 0000-0001-8434-0042
+  email: marshad@iitk.ac.in, arshadrahman25@gmail.com
 date: '2023-11-01'
 date_received: '2021-12-06'
 journal:
